--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,13 +32,14 @@
 <!--</router-outlet>-->
 
 
-<div class="wrapper">
+<!--<div class="wrapper">-->
 
-  <!--<top-bar></top-bar>-->
-  <div class="main-panel">
+  <!--&lt;!&ndash;<top-bar></top-bar>&ndash;&gt;-->
+  <!--<div class="main-panel">-->
+  <!--<div class="container">-->
     <router-outlet></router-outlet>
-  </div>
+  <!--</div>-->
 
-</div>
+<!--</div>-->
 
 
