--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -10,13 +10,14 @@
     </div>
   </div>
 </div>
+
 <div class="layout-container">
   <div class="product-grid">
     <div class="col-md-4 col-sm-6" *ngFor="let product of products;let i = index">
       <div class="image-container-list">
         <div class="product-image" [ngStyle]="{'background-image': 'url(./assets/imgs/' + product.image + ')'}"></div>
         <div class="overlay">
-          <div class="button button-primary" [routerLink]="['./product',i+1]">Edit Details</div>
+          <div class="button button-primary" routerLink= "/products/product/edit/{{products[i]._id}}}">Edit Details</div>
         </div>
       </div>
       <div class="product-details">
