--- a/src/app/components/products/product-list/product-list.component.html
+++ b/src/app/components/products/product-list/product-list.component.html
@@ -17,7 +17,7 @@
       <div class="image-container-list">
         <div class="product-image" [ngStyle]="{'background-image': 'url(./assets/imgs/' + product.image + ')'}"></div>
         <div class="overlay">
-          <div class="button button-primary" routerLink= "/products/product/edit/{{products[i]._id}}}">Edit Details</div>
+          <div class="button button-primary" routerLink= "/products/product/edit/{{products[i]._id}}">Edit Details</div>
         </div>
       </div>
       <div class="product-details">
