--- a/src/app/components/user/profile/profile.component.css
+++ b/src/app/components/user/profile/profile.component.css
@@ -6,10 +6,11 @@
   background-color: #f6f6f6;
   padding-bottom: 70px;
 }
-.cart-page-container {
+.cart-page-container-pro {
   max-width: 1140px;
+  height: 450px;
   text-align: center;
-  padding: 0 30px;
+  padding: 0 40px;
   margin: auto;
 }
 .cart-page-header h1 {
