--- a/src/app/components/user/profile/profile.component.html
+++ b/src/app/components/user/profile/profile.component.html
@@ -1,4 +1,3 @@
-
 <nav class="row cart-total">
   <div class="container-fluid row">
     <div class="pull-left">
@@ -14,12 +13,13 @@
 
 <br/>
 
-<div class="cart-page-container div1">
+<div class="cart-page-container-pro div1" style="position: relative; top: 0%; padding: 20px; width: 100%">
 
     <div class="row cart-total">
     <br/>
-        <div class="cart-page-container">
-          <h1>My profile</h1>
+      <h1 >My profile</h1>
+        <div class="cart-page-container"  style="float: left; width: 60%" >
+
           <p></p>
         <div *ngIf="errorFlag" class="alert alert-danger">
         {{errorMsg}}
@@ -32,34 +32,22 @@
           <p></p>
         <form (ngSubmit)="updateUser()" #f="ngForm">
 
+        <div class="form-group">
+         <label >Username</label>
+         <input [(ngModel)]="user.username" type="text" class="input-style" name="username" placeholder="jannunzi">
+        </div>
 
-          <!--<div class="form-group">-->
-            <!--<label >Username</label>-->
-            <!--<input [(ngModel)]="user.username" type="text" class="input-style" name="firstName" placeholder="1234@mail.com">-->
-          <!--</div>-->
-<br/>
-          <br/>
-          <div class="form-group">
-            <label >Username</label>
-            <input [(ngModel)]="user.username" type="text" class="input-style" name="username" placeholder="jannunzi">
-          </div>
-
-          <div class="form-group">
+        <div class="form-group">
         <label >Email</label>
         <input [(ngModel)]="user.email" type="text" class="input-style" name="firstName" placeholder="1234@mail.com">
         </div>
-
-          <!--<div class="form-group">-->
-            <!--<label >Username</label>-->
-            <!--<input [(ngModel)]="user.username" type="text" class="input-style" name="firstName" placeholder="1234@mail.com">-->
-          <!--</div>-->
 
         <div class="form-group">
         <label >User Type</label>
         <input [(ngModel)]="user.type" type="text" class="input-style" name="lastName" placeholder="user">
         </div>
 
-      <div class="quick-cart-footer" style="position: relative; width: 60%; height: 100px; left: 50%; top:20px; margin: 0 0 0 -30%">
+        <div class="quick-cart-footer">
         <div class="quick-cart-footer-cell">
         <button  type="submit" class="button button-secondary button-wide-profile button-large">Update</button>
         </div>
@@ -72,19 +60,21 @@
         <button class="button button-secondary button-wide-profile button-large" routerLink="/login/{{userType}}" (click)="logout()"  >Logout</button>
         </div>
       </div>
-
-
-          <div class="container" style="position: relative; width: 60%; height: 20px; left: 50%; top:40px; margin: 0 0 0 -30%">
-            <strong class="continue-shopping"> <a routerLink="/category">continue shopping</a></strong>
-            <div class="checkout-button button button-primary button-large"> <a routerLink="/user/{{user._id}}/cart"> Checkout</a></div>
-          </div>
-
-
         </form>
-        <div class="cart-page-content">
-        <button class="cart" style="color: black" routerLink="/user/{{user._id}}/cart">View My cart</button>
-        </div>
+
      </div>
+
+      <p></p>
+      <p></p>
+      <br/>
+      <div class="container" style="float: right; width: 50%; margin: 0">
+        <strong class="continue-shopping"> <a routerLink="/category">continue shopping</a></strong>
+        <div class="checkout-button"> <a routerLink="/user/{{user._id}}/cart">My Cart</a></div>
+      </div>
+
+      <!--<div class="container">-->
+        <!--<button class="cart" style="color: black" routerLink="/user/{{user._id}}/cart">View My cart</button>-->
+      <!--</div>-->
   <!--</div>-->
   <div class="cart-page-content">
     <!--<h4>Your cart is empty.</h4>-->
