add Delete Function

--- a/src/app/components/products/product-edit/product-edit.component.html
+++ b/src/app/components/products/product-edit/product-edit.component.html
@@ -47,6 +47,7 @@
 
       <div class="quick-cart-footer" style="position: relative; width: 60%; height: 200px; left: 50%; top:80px; margin: 0 0 0 -30%">
         <button class="button button-secondary button-large" (click)="updateProduct()">Update</button>
+        <button class="button button-secondary button-large" (click)="deleteProduct()">Delete</button>
       </div>
     </div>
   </form>
