--- a/src/app/components/user/profile/profile-seller/profile-seller.component.html
+++ b/src/app/components/user/profile/profile-seller/profile-seller.component.html
@@ -49,8 +49,8 @@
           <div class="quick-cart-footer-pro" style="position: relative; width: 100%; height: 20px; left: 50%; top:40px; margin: 0 0 0 -45%">
             <p></p>
             <p></p>
-            <strong style="width: 50%; float: left" class="continue-shopping" ><a routerLink="/seller/{{user._id}}/products/new">continue add products</a></strong>
-            <strong class=" button button-primary " style="width: 50%; float: right" > <a routerLink="/seller/{{user._id}}/products"> My Product List</a></strong>
+            <strong style="width: 50%; float: left" class="continue-shopping" ><a routerLink="/seller/{{userId}}/products/new">continue add products</a></strong>
+            <strong class=" button button-primary " style="width: 50%; float: right" > <a routerLink="/seller/{{userId}}/products"> My Product List</a></strong>
             <br style="clear:both;"/>
           </div>
 
