--- a/src/app/components/user/profile/profile-seller/profile-seller.component.html
+++ b/src/app/components/user/profile/profile-seller/profile-seller.component.html
@@ -1,77 +1,141 @@
-<div class="cart-page-container">
-  <div class="cart-page-content div1" >
-    <div class="row cart-total">
-      <h1>My profile (I'm a seller)</h1>
-      <!--<div class="col-lg-offset-6">-->
-        <div class="cart-page-container">
+<!--<div class="cart-page-container">-->
+  <!--<div class="cart-page-content div1" >-->
+    <!--<div class="row cart-total">-->
+      <!--<h1>My profile (I'm a seller)</h1>-->
+      <!--&lt;!&ndash;<div class="col-lg-offset-6">&ndash;&gt;-->
+        <!--<div class="cart-page-container">-->
 
-          <div *ngIf="errorFlag" class="alert alert-danger">
-            {{errorMsg}}
-          </div>
+          <!--<div *ngIf="errorFlag" class="alert alert-danger">-->
+            <!--{{errorMsg}}-->
+          <!--</div>-->
 
-          <div *ngIf="updateFlag" class="alert alert-info">
-            {{updateMsg}}
-          </div>
+          <!--<div *ngIf="updateFlag" class="alert alert-info">-->
+            <!--{{updateMsg}}-->
+          <!--</div>-->
 
-          <form (ngSubmit)="updateUser()" #f="ngForm">
+          <!--<form (ngSubmit)="updateUser()" #f="ngForm">-->
 
-            <div class="form-group">
-              <label >Username</label>
-                <input [(ngModel)]="user.username" type="text" class="input-style" name="username" placeholder="jannunzi">
-            </div>
+            <!--<div class="form-group">-->
+              <!--<label >Username</label>-->
+                <!--<input [(ngModel)]="user.username" type="text" class="input-style" name="username" placeholder="jannunzi">-->
+            <!--</div>-->
 
-            <div class="form-group">
-              <label >Email</label>
-                <input [(ngModel)]="user.email" type="text" class="input-style" name="firstName" placeholder="1234@mail.com">
-            </div>
+            <!--<div class="form-group">-->
+              <!--<label >Email</label>-->
+                <!--<input [(ngModel)]="user.email" type="text" class="input-style" name="firstName" placeholder="1234@mail.com">-->
+            <!--</div>-->
 
-            <div class="form-group">
-              <label >Type</label>
-                <input [(ngModel)]="user.userType" type="text" class="input-style" name="lastName" placeholder="user">
-            </div>
+            <!--<div class="form-group">-->
+              <!--<label >Type</label>-->
+                <!--<input [(ngModel)]="user.userType" type="text" class="input-style" name="lastName" placeholder="user">-->
+            <!--</div>-->
 
-            <div class="quick-cart-footer-pro" style="position: relative; width: 60%; height: 100px; left: 50%; top:20px; margin: 0 0 0 -30%">
-              <div class="quick-cart-footer-cell">
-                <button  type="submit" class="button button-secondary button-wide button-large">Update</button>
-              </div>
+            <!--<div class="quick-cart-footer-pro" style="position: relative; width: 60%; height: 100px; left: 50%; top:20px; margin: 0 0 0 -30%">-->
+              <!--<div class="quick-cart-footer-cell">-->
+                <!--<button  type="submit" class="button button-secondary button-wide button-large">Update</button>-->
+              <!--</div>-->
 
-              <div class="quick-cart-footer-cell">
-                <button class="button button-secondary button-wide button-large" routerLink="/login" (click)="deleteUser()">Delete</button>
-              </div>
+              <!--<div class="quick-cart-footer-cell">-->
+                <!--<button class="button button-secondary button-wide button-large" routerLink="/login" (click)="deleteUser()">Delete</button>-->
+              <!--</div>-->
 
-              <div class="quick-cart-footer-cell">
-                <button class="button button-secondary button-wide button-large" routerLink="/login/{{userType}}" (click)="logout()" >Logout</button>
-              </div>
-            </div>
-          </form>
+              <!--<div class="quick-cart-footer-cell">-->
+                <!--<button class="button button-secondary button-wide button-large" routerLink="/login/{{userType}}" (click)="logout()" >Logout</button>-->
+              <!--</div>-->
+            <!--</div>-->
+          <!--</form>-->
 
-          <p></p>
-          <div class="quick-cart-footer-pro" style="position: relative; width: 100%; height: 20px; left: 50%; top:40px; margin: 0 0 0 -45%">
-            <p></p>
-            <p></p>
-            <strong style="width: 50%; float: left" class="continue-shopping" ><a routerLink="/seller/{{userId}}/products/new">continue add products</a></strong>
-            <strong class=" button button-primary " style="width: 50%; float: right" > <a routerLink="/seller/{{userId}}/products"> My Product List</a></strong>
-            <br style="clear:both;"/>
-          </div>
+          <!--<p></p>-->
+          <!--<div class="quick-cart-footer-pro" style="position: relative; width: 100%; height: 20px; left: 50%; top:40px; margin: 0 0 0 -45%">-->
+            <!--<p></p>-->
+            <!--<p></p>-->
+            <!--<strong style="width: 50%; float: left" class="continue-shopping" ><a routerLink="/seller/{{userId}}/products/new">continue add products</a></strong>-->
+            <!--<strong class=" button button-primary " style="width: 50%; float: right" > <a routerLink="/seller/{{userId}}/products"> My Product List</a></strong>-->
+            <!--<br style="clear:both;"/>-->
+          <!--</div>-->
 
-        </div>
-
-      <!--<div >-->
-        <!--<p></p>-->
-        <!--<p></p>-->
-        <!--<button routerLink="seller/{{user._id}}/products">My Products List</button>-->
-      <!--</div>-->
-
-      <!--</div>-->
-      <!--<div class="container-fluid">-->
-        <!--<div class="cart-page-content-pro">-->
-
-          <!--Plate Home-->
         <!--</div>-->
-      <!--</div>-->
 
+      <!--&lt;!&ndash;<div >&ndash;&gt;-->
+        <!--&lt;!&ndash;<p></p>&ndash;&gt;-->
+        <!--&lt;!&ndash;<p></p>&ndash;&gt;-->
+        <!--&lt;!&ndash;<button routerLink="seller/{{user._id}}/products">My Products List</button>&ndash;&gt;-->
+      <!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+      <!--&lt;!&ndash;</div>&ndash;&gt;-->
+      <!--&lt;!&ndash;<div class="container-fluid">&ndash;&gt;-->
+        <!--&lt;!&ndash;<div class="cart-page-content-pro">&ndash;&gt;-->
+
+          <!--&lt;!&ndash;Plate Home&ndash;&gt;-->
+        <!--&lt;!&ndash;</div>&ndash;&gt;-->
+      <!--&lt;!&ndash;</div>&ndash;&gt;-->
+
+    <!--</div>-->
+
+  <!--</div>-->
+<!--</div>-->
+
+
+
+
+
+
+
+
+<nav class="navbar" style="margin: 0px">
+  <div class="row container" >
+    <div class="pull-right" style="position: absolute; right: 20px">
+      <button type="button" routerLink="/" class="btn btn-outline-secondary">HOMEPAGE</button>
+      <button type="button" routerLink="/" class="btn btn-outline-secondary">GO TO LOGIN</button>
+    </div>
+  </div>
+</nav>
+
+<div class="bg-profile cart-total">
+  <div class="container">
+    <div *ngIf="errorFlag" class="alert alert-danger">
+      {{errorMsg}}
+    </div>
+    <h1 >My profile</h1>
+    <div *ngIf="errorFlag" class="alert alert-danger">
+      {{errorMsg}}
     </div>
 
+    <div *ngIf="updateFlag" class="alert alert-info">
+      {{updateMsg}}
+    </div>
+    <form>
+
+      <div class="register-bg" style="position: absolute; width: 65%; height: 300px; top: 200px; left: 10%">
+
+        <div class="product-page-container" style="position: relative; top: 40px;" >
+
+          <div class="form-group">
+            <label >Username</label>
+            <input [(ngModel)]="user.username" type="text" class="input-style" name="username" placeholder="jannunzi">
+          </div>
+
+          <div class="form-group">
+            <label>Email</label>
+            <input [(ngModel)]="user.email" type="text" class="input-style" name="email" placeholder="jannunzi@gmail.com">
+          </div>
+
+          <div class="form-group">
+            <label >User Type</label>
+            <input [(ngModel)]="user.userType" type="text" class="input-style" name="lastName" placeholder="user">
+          </div>
+
+          <!--<strong style="width: 50%; float: left" class="continue-shopping" ><a routerLink="/seller/{{userId}}/products/new">continue add products</a></strong>-->
+          <strong class="continue-shopping"> <a routerLink="/seller/{{userId}}/products/new">continue add products</a></strong>
+          <br/>
+          <br/>
+          <strong class="continue-shopping" > <a routerLink="/seller/{{userId}}/products"> My Product List</a></strong>
+        </div>
+        <br/>
+      </div>
+
+    </form>
   </div>
 </div>
+
 
