--- a/src/app/components/user/profile/profile-admin/profile-admin.component.html
+++ b/src/app/components/user/profile/profile-admin/profile-admin.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid row" style="margin: 0">
     <div class="pull-left navbar-text">
       <ol class="product-breadcrumbs head-size" id="menu" style="margin: 0">
-      <li class="breadcrumb-item"><a routerLink="..">Home</a></li>
+      <li class="breadcrumb-item"><a routerLink="/login/admin">Home</a></li>
       <li class="breadcrumb-item">  <a routerLink="./allproducts">Products</a></li>
       <li class="breadcrumb-item">  <a routerLink="./allusers">Users</a></li>
       </ol>
